--- a/lms/static/sass/course/base/_base.scss
+++ b/lms/static/sass/course/base/_base.scss
@@ -188,3 +188,11 @@ img {
     text-align: center;
   }
 }
+
+.notice-incontext {
+  @include box-shadow(inset 0 1px 2px 1px rgba(0,0,0,0.1));
+  @include border-radius(2px);
+  padding: (15px);
+  margin-bottom: 0px;
+  background: rgb(253, 248, 235);
+}
